--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Devon Grove
 description: Computer Science Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: /images/avatar.png
 
 #
 # Flags below are optional
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: djgrove
   instagram:
-  linkedin: djgrove
+  linkedin: devongrove
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
