--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,15 @@
-#
-# This file contains configuration flags to customize your site
-#
+### CONFIG FLAGS
 
-# Name of your site (displayed in the header)
+# Site name (in header)
 name: Devon Grove
 
 # Short bio or description (displayed in the header)
 description: Computer Science Student
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
+# Header avatar picture
 avatar: /images/avatar.png
 
-#
-# Flags below are optional
-#
+## OPTIONAL FLAGS
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -25,7 +21,7 @@ footer-links:
   instagram:
   linkedin: devongrove
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss:
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
