--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 name: Devon Grove
 
 # Short bio or description (displayed in the header)
-description: Computer Science Student
+description: Software Developer
 
 # Header avatar picture
 avatar: /images/avatar.png
