--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
+title: Devon Grove | Software Developer
+description: Devon Grove | Software Developer
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://devongrove.com" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Devon Grove
@@ -33,8 +33,8 @@ links:
     url: /
   - title: About
     url: /about
-  - title: Series
-    url: /series
+  - title: Blog
+    url: /blog
   - title: Tags
     url: /tags
 
